manifests/LBV3/flask-backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lbv3-flask-ingress
  namespace: lbv3
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "le-resolver"
spec:
  ingressClassName: "traefik"
  rules:
    - host: api.abdulovesdalia.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lbv3-flask-svc
                port:
                  number: 80
